cabal-version:       >=1.10

name:                cava-examples
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        ../LICENSE
author:              The SilverOak Team
maintainer:          benblaxill@google.com
-- copyright:
-- category:
build-type:          Simple

executable examples
  main-is:             ExamplesSV.hs
  other-modules:
        AdderTree
        BitonicSorter
        FullAdderExample
        NandGate
        TwoSorter
        UnsignedAdderExamples
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15, Cava2HDL
  -- hs-source-dirs:
  default-language:    Haskell2010
