cabal-version:       >=1.10

name:                cava-tests
version:             0.1.0.0
author:              The SilverOak Team
maintainer:          benblaxill@google.com
build-type:          Simple

executable tests
  main-is:             TestsSV.hs
  other-modules:
        AccumulatingAdderEnable
        AdderSubtractorTests
        Array
        CountBy
        Delay
        DoubleCountBy
        Instantiate
        MuxTests
        TestDecoder
        TestMultiply
  -- other-extensions:
  build-depends:       base >=4.12 && <4.15, Cava2HDL

  -- hs-source-dirs:
  default-language:    Haskell2010
