cabal-version:       >=1.10

name:                silveroak-pinxmux
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        ../LICENSE
author:              The SilverOak Team
maintainer:          benblaxill@google.com
-- copyright:
-- category:
build-type:          Simple

executable pinmux
  main-is:             PinmuxSV.hs
  other-modules: Pinmux
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15, Cava2HDL

  -- hs-source-dirs:
  default-language:    Haskell2010
